--- a/.github/workflows/phpdoc.yml
+++ b/.github/workflows/phpdoc.yml
@@ -1,4 +1,10 @@
-on: [push, workflow_call, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   phpdoc:
