--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "mahocommerce/maho",
     "description": "",
+    "homepage": "https://mahocommerce.com",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
@@ -24,7 +25,6 @@
         "ext-zlib": "*",
         "cweagans/composer-patches": "^1.7",
         "ezyang/htmlpurifier": "^4.17",
-        "magento-hackathon/magento-composer-installer": "^3.1 || ^2.1 || ^4.0",
         "pelago/emogrifier": "^7.0",
         "phpseclib/mcrypt_compat": "^2.0.3",
         "phpseclib/phpseclib": "^3.0.14",
@@ -55,14 +55,6 @@
         }
     },
     "extra": {
-        "magento-root-dir": ".",
-        "magento-deploystrategy": "copy",
-        "magento-deploystrategy-dev": "symlink",
-        "magento-deploystrategy-overwrite": {
-            "openmage/dev-copyright": "copy",
-            "openmage/dev-translations": "copy"
-        },
-        "magento-force": true,
         "patches": {
             "shardj/zf1-future": {
                 "MAG-1.1.1": "https://raw.githubusercontent.com/OpenMage/composer-patches/74862e7a9fa29dd62c5c02d585d931ce9e3c5815/patches/MAG-1.1.1.patch",
@@ -77,9 +69,9 @@
     },
     "config": {
         "allow-plugins": {
-            "magento-hackathon/magento-composer-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "cweagans/composer-patches": true
+            "cweagans/composer-patches": true,
+            "magento-hackathon/magento-composer-installer": false
         },
         "platform": {
             "php": "8.2"
