--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "pelago/emogrifier": "^7.0",
         "phpseclib/mcrypt_compat": "^2.0.3",
         "phpseclib/phpseclib": "^3.0.14",
-        "shardj/zf1-future": "1.24.0"
+        "shardj/zf1-future": "1.24.0",
+        "symfony/console": "^7.1"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
@@ -48,6 +49,11 @@
     },
     "minimum-stability": "dev",
     "prefer-stable" : true,
+    "autoload": {
+        "psr-4": {
+            "Maho\\": "lib/MahoCLI"
+        }
+    },
     "autoload-dev": {
         "psr-4": {
             "OpenMage\\Tests\\Unit\\": "dev/tests/unit"
