--- a/pub/.htaccess
+++ b/pub/.htaccess
@@ -1,186 +1,93 @@
-############################################
-## GoDaddy specific options
-
-#   Options -MultiViews
-
-## you might also need to add this line to php.ini
-##     cgi.fix_pathinfo = 1
-## if it still doesn't work, rename php.ini to php7.ini
-
-############################################
-## default index file
-
-    DirectoryIndex index.php
-
-############################################
-## PHP settings
+DirectoryIndex index.php
 
 <IfModule mod_php.c>
-
-############################################
-## adjust max execution time
-
     php_value max_execution_time 18000
-
-############################################
-## disable automatic session start
-## before autoload was initialized
-
     php_flag session.auto_start off
 
-############################################
-## enable resulting html compression
-
+    # enable resulting html compression
     #php_flag zlib.output_compression on
 
-###########################################
-# disable user agent verification to not break multiple image upload
-
+    # disable user agent verification to not break multiple image upload
     php_flag suhosin.session.cryptua off
-
 </IfModule>
 
-<IfModule mod_security.c>
-###########################################
 # disable POST processing to not break multiple image upload
-
+<IfModule mod_security.c>
     SecFilterEngine Off
     SecFilterScanPOST Off
 </IfModule>
 
 <IfModule mod_deflate.c>
-
-############################################
-## enable apache served files compression
-## http://developer.yahoo.com/performance/rules.html#gzip
+    # enable apache served files compression
+    # http://developer.yahoo.com/performance/rules.html#gzip
 
     # Insert filter on all content
     ###SetOutputFilter DEFLATE
     # Insert filter on selected content types only
     #AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript
 
-    # Netscape 4.x has some problems...
-    #BrowserMatch ^Mozilla/4 gzip-only-text/html
-
-    # Netscape 4.06-4.08 have some more problems
-    #BrowserMatch ^Mozilla/4\.0[678] no-gzip
-
-    # MSIE masquerades as Netscape, but it is fine
-    #BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
-
     # Don't compress images
     #SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip dont-vary
 
     # Make sure proxies don't deliver the wrong content
     #Header append Vary User-Agent env=!dont-vary
-
 </IfModule>
 
 <IfModule mod_ssl.c>
-
-############################################
-## make HTTPS env vars available for CGI mode
-
+    # Make HTTPS env vars available for CGI mode
     SSLOptions StdEnvVars
-
 </IfModule>
 
 <IfModule mod_rewrite.c>
-
-############################################
-## enable rewrites
-
     Options +FollowSymLinks
     RewriteEngine on
 
-############################################
-## Prevent serving "hidden" files like git repository
-
+    # Prevent serving "hidden" files like git repository
     RewriteCond %{REQUEST_URI} /\.
     RewriteRule ^(.*)$ / [R=404,L]
 
-############################################
-## uncomment next line to enable light API calls processing
-
-#    RewriteRule ^api/([a-z][0-9a-z_]+)/?$ api.php?type=$1 [QSA,L]
-
-############################################
-## rewrite API2 calls to api.php (by now it is REST only)
-
+    # Uncomment next line to enable light API calls processing
+    #RewriteRule ^api/([a-z][0-9a-z_]+)/?$ api.php?type=$1 [QSA,L]
     RewriteRule ^api/rest api.php?type=rest [QSA,L]
 
-############################################
-## workaround for HTTP authorization
-## in CGI environment
-
+    # Workaround for HTTP authorization in CGI environment
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-############################################
-## TRACE and TRACK HTTP methods disabled to prevent XSS attacks
-
+    # TRACE and TRACK HTTP methods disabled to prevent XSS attacks
     RewriteCond %{REQUEST_METHOD} ^TRAC[EK]
     RewriteRule .* - [L,R=405]
 
-<IfModule mod_setenvif.c>
+    <IfModule mod_setenvif.c>
+        # Enable Developer Mode based on OS environment variable
+        SetEnvIfExpr "osenv('MAGE_IS_DEVELOPER_MODE') == '1'" MAGE_IS_DEVELOPER_MODE=1
 
-############################################
-## Enable Developer Mode based on OS environment variable
+        <IfModule mod_headers.c>
+            # X-Content-Type-Options: nosniff disable content-type sniffing on some browsers.
+            Header set X-Content-Type-Options: nosniff
 
-    SetEnvIfExpr "osenv('MAGE_IS_DEVELOPER_MODE') == '1'" MAGE_IS_DEVELOPER_MODE=1
-
-    <IfModule mod_headers.c>
-
-        ############################################
-        # X-Content-Type-Options: nosniff disable content-type sniffing on some browsers.
-        Header set X-Content-Type-Options: nosniff
-
-        ############################################
-        # This header forces to enables the Cross-site scripting (XSS) filter in browsers (if disabled)
-        BrowserMatch \bMSIE\s8 ie8
-        Header set X-XSS-Protection: "1; mode=block" env=!ie8
-
+            # This header forces to enables the Cross-site scripting (XSS) filter in browsers (if disabled)
+            Header set X-XSS-Protection: "1; mode=block"
+        </IfModule>
     </IfModule>
-</IfModule>
 
-############################################
-## redirect for mobile user agents
-
-    #RewriteCond %{REQUEST_URI} !^/mobiledirectoryhere/.*$
-    #RewriteCond %{HTTP_USER_AGENT} "android|blackberry|ipad|iphone|ipod|iemobile|opera mobile|palmos|webos|googlebot-mobile" [NC]
-    #RewriteRule ^(.*)$ /mobiledirectoryhere/ [L,R=302]
-
-############################################
-## always send 404 on missing files in these folders
-
+    # Always send 404 on missing files in these folders
     RewriteCond %{REQUEST_URI} !^/(media|skin|js)/
 
-############################################
-## never rewrite for existing files, directories and links
-
+    # Never rewrite for existing files, directories and links
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-l
 
-############################################
-## rewrite everything else to index.php
-
+    # Rewrite everything else to index.php
     RewriteRule .* index.php [L]
-
 </IfModule>
 
-
-############################################
-## Prevent character encoding issues from server overrides
-## If you still have problems, use the second line instead
-
-    AddDefaultCharset Off
-    #AddDefaultCharset UTF-8
+# Prevent character encoding issues from server overrides
+# If you still have problems, use the second line instead
+AddDefaultCharset Off
+#AddDefaultCharset UTF-8
 
 <IfModule mod_expires.c>
-
-############################################
-## Add default Expires header
-## http://developer.yahoo.com/performance/rules.html#expires
     ExpiresActive On
     ExpiresByType image/webp "access plus 1 year"
     ExpiresByType image/jpg "access plus 1 year"
@@ -196,31 +103,25 @@
     ExpiresDefault "access plus 2 days"
 </IfModule>
 
-############################################
-## By default allow all access
+# By default allow all access
+Order allow,deny
+Allow from all
 
+# Deny access to other project files to prevent disclosure of the installed Magento version or other information
+# Only robots.txt and manifest.json should be allowed by default
+<FilesMatch (?<!robots)\.txt$>
     Order allow,deny
-    Allow from all
+    Deny from all
+</FilesMatch>
+<FilesMatch (?<!manifest)\.json$>
+    Order allow,deny
+    Deny from all
+</FilesMatch>
+<FilesMatch \.(dist|flag|ip|lock|md|neon|sample|sh|yml|yaml)$>
+    Order allow,deny
+    Deny from all
+</FilesMatch>
 
-###########################################
-## Deny access to other project files to prevent disclosure of the installed Magento version or other information
-## Only robots.txt and manifest.json should be allowed by default
-
-    <FilesMatch (?<!robots)\.txt$>
-        Order allow,deny
-        Deny from all
-    </FilesMatch>
-    <FilesMatch (?<!manifest)\.json$>
-        Order allow,deny
-        Deny from all
-    </FilesMatch>
-    <FilesMatch \.(dist|flag|ip|lock|md|neon|sample|sh|yml|yaml)$>
-        Order allow,deny
-        Deny from all
-    </FilesMatch>
-
-############################################
-## If running in cluster environment, uncomment this
-## http://developer.yahoo.com/performance/rules.html#etags
-
-    #FileETag none
+# If running in cluster environment, uncomment this
+# https://developer.yahoo.com/performance/rules.html#etags
+#FileETag none
