--- a/.github/workflows/syntax-xml.yml
+++ b/.github/workflows/syntax-xml.yml
@@ -1,11 +1,9 @@
 name: XML Syntax
 
 on:
-  # Run automatically every Monday on midnight.
-  schedule:
-    - cron: '0 0 * * 1'
+  push:
+  pull_request:
   workflow_call:
-  # Allow manually triggering the workflow.
   workflow_dispatch:
 
 jobs:
