First release of the CommandDiscoverer for MahoCLI

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
     "prefer-stable" : true,
     "autoload": {
         "psr-4": {
-            "Maho\\": "lib/MahoCLI"
+            "MahoCLI\\": "lib/MahoCLI"
         }
     },
     "extra": {
