--- a/pub/media/.htaccess
+++ b/pub/media/.htaccess
@@ -1,38 +1,10 @@
 Options All -Indexes
 
-############################################
-## Disable PHP code execution
-
-<IfModule mod_php7.c>
-    php_flag engine 0
-</IfModule>
-
+# Disable PHP code execution
 <IfModule mod_php.c>
     php_flag engine 0
 </IfModule>
 
-############################################
-## Don't permit execution of CGI scripts
-
-    AddHandler cgi-script .php .pl .py .jsp .asp .sh .cgi
-    Options -ExecCGI
-
-<IfModule mod_rewrite.c>
-
-############################################
-## Enable rewrites
-
-    Options +FollowSymLinks
-    RewriteEngine on
-
-############################################
-## Never rewrite for existing files
-
-    RewriteCond %{REQUEST_FILENAME} !-f
-
-############################################
-## Rewrite everything else to get.php
-
-    RewriteRule (.*) ../get.php [L]
-
-</IfModule>
+# Disable CGI scripts execution
+AddHandler cgi-script .php .pl .py .jsp .asp .sh .cgi
+Options -ExecCGI
