--- a/pub/skin/.htaccess
+++ b/pub/skin/.htaccess
@@ -1,16 +1,8 @@
-############################################
-## Disable PHP code execution
-
-<IfModule mod_php7.c>
-    php_flag engine 0
-</IfModule>
-
+# Disable PHP code execution
 <IfModule mod_php.c>
     php_flag engine 0
 </IfModule>
 
-############################################
-## Don't permit execution of CGI scripts
-
-    AddHandler cgi-script .php .pl .py .jsp .asp .sh .cgi
-    Options -ExecCGI
+# Disable CGI scripts execution
+AddHandler cgi-script .php .pl .py .jsp .asp .sh .cgi
+Options -ExecCGI
