--- a/.github/workflows/sync-l10n-repo.yml
+++ b/.github/workflows/sync-l10n-repo.yml
@@ -1,5 +1,4 @@
 name: Sync L10N Repo
-
 on:
   push:
     branches:
@@ -23,12 +22,13 @@ jobs:
           owner: MahoCommerce
 
       - name: Checkout main repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           path: maho
+          fetch-depth: 0
 
       - name: Checkout l10n repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           repository: MahoCommerce/maho-l10n
           path: maho-l10n
@@ -43,7 +43,7 @@ jobs:
         run: |
           cd maho
           if [[ "${{ github.event_name }}" == "push" ]]; then
-            changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^app/locale/en_US/')
+            changed_files=$(git diff --name-only origin/main HEAD | grep '^app/locale/en_US/')
           else
             changed_files=$(find app/locale/en_US/ -type f)
           fi
