--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -60,6 +60,8 @@ parameters:
     level: 4
     checkFunctionNameCase: true
     checkInternalClassCaseSensitivity: true
+    ignoreErrors:
+        - identifier: missingType.iterableValue
     treatPhpDocTypesAsCertain: false
     typeAliases:
         Cm_RedisSession_Model_Session: 'Mage_Core_Model_Resource_Session'
