--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "OSL-3.0",
         "AFL-3.0"
     ],
-    "type": "magento-source",
+    "type": "maho-source",
     "require": {
         "php": ">=8.2 <8.5",
         "ext-ctype": "*",
