--- a/.gitattributes
+++ b/.gitattributes
@@ -1,25 +1,14 @@
 # Make packagist / composer download smaller
-/.ddev export-ignore
 /.github export-ignore
-/dev export-ignore
-/docs export-ignore
-
-/.all-contributorsrc export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.gitpod.yml export-ignore
-
-/.php-cs-fixer.dist.php export-ignore
-/.phpcs.ecg.xml.dist export-ignore
-/.phpcs.php.xml.dist export-ignore
-/.phpcs.xml.dist export-ignore
-/.phpmd.dist.xml export-ignore
+/.php-cs-fixer.php export-ignore
+/.phpcs.xml export-ignore
 /.phpstan.baseline.neon export-ignore
 /.phpstan.neon export-ignore
-
 /README.md export-ignore
 
-# Enforce checkout with linux lf consistent over all platforms
+# Enforce checkout with linux lf
 *.html text eol=lf
 *.css text eol=lf
 *.js text eol=lf
