--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Visual Studio Code
+# IDEs
+.idea
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -8,18 +9,9 @@
 .history/
 *.vsix
 
-# PhpStorm
-.idea
-
-# Maho config
+# Maho stuff
 /app/etc/local.xml
 
-# CM Redis
-/app/code/community/Cm
-/app/etc/modules/Cm_RedisSession.xml
-/lib/Credis
-
-# pub
 /pub/js/tinymce
 /pub/media/*
 !/pub/media/.htaccess
@@ -31,16 +23,8 @@
 /var/*
 !/var/.htaccess
 
-# composer
+# Composer
 /vendor
-
-# .phar (n98-magerun, ...)
-*.phar
 
 # PHP-CS-Fixer
 .php-cs-fixer.cache
-.php-cs-fixer*
-!.php-cs-fixer.dist.*
-
-.phpcs*.xml
-!.phpcs*.xml.dist
