ext-session and ext-openssl should be required

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-mbstring": "*",
+        "ext-openssl": "*",
         "ext-pdo": "*",
+        "ext-session": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
         "ext-zlib": "*",
