Added more required extensions

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-dom": "*",
+        "ext-fileinfo": "*",
+        "ext-filter": "*",
         "ext-gd": "*",
         "ext-hash": "*",
         "ext-iconv": "*",
@@ -25,6 +27,7 @@
         "ext-session": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
+        "ext-spl": "*",
         "ext-zlib": "*",
         "cweagans/composer-patches": "^1.7",
         "ezyang/htmlpurifier": "^4.17",
