--- a/composer.json
+++ b/composer.json
@@ -40,13 +40,20 @@
         "symfony/console": "^7.1",
         "tinymce/tinymce": "6.8.*"
     },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-mbstring": "*",
+        "symfony/polyfill-intl-grapheme": "*",
+        "symfony/polyfill-intl-normalizer": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*"
+    },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
         "friendsofphp/php-cs-fixer": "^3.4",
         "mahocommerce/maho-phpstan-plugin": "@dev",
         "phpstan/phpstan": "^1.12",
-        "squizlabs/php_codesniffer": "^3.7",
-        "symplify/vendor-patches": "^11.1"
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "suggest": {
         "colinmollenhour/cache-backend-redis": "Redis support for Maho's backend cache",
