--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,11 @@
         "cweagans/composer-patches": "^1.7",
         "ezyang/htmlpurifier": "^4.17",
         "mahocommerce/maho-composer-plugin": "dev-main",
-        "mklkj/tinymce-i18n": "*",
         "pelago/emogrifier": "^7.0",
         "phpseclib/mcrypt_compat": "^2.0.3",
         "phpseclib/phpseclib": "^3.0.14",
         "shardj/zf1-future": "1.24.0",
-        "symfony/console": "^7.1",
-        "tinymce/tinymce": "6.8.*"
+        "symfony/console": "^7.1"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
