--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -36,5 +36,19 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --ignore-platform-req=ext-*
 
+      - name: "Restore result cache"
+        uses: actions/cache/restore@v4
+        with:
+          path: var
+          key: "phpstan-result-cache-${{ runner.os }}-${{ matrix.php-versions }}-${{ github.run_id }}"
+          restore-keys: phpstan-result-cache-
+
       - name: PHPStan Static Analysis
         run: XDEBUG_MODE=off php vendor/bin/phpstan.phar analyze
+
+      - name: "Save result cache"
+        uses: actions/cache/save@v3
+        if: always()
+        with:
+          path: var
+          key: "phpstan-result-cache-${{ runner.os }}-${{ matrix.php-versions }}-${{ github.run_id }}"
