--- a/.phpstan.neon
+++ b/.phpstan.neon
@@ -59,3 +59,4 @@ parameters:
     treatPhpDocTypesAsCertain: false
     typeAliases:
         Cm_RedisSession_Model_Session: 'Mage_Core_Model_Resource_Session'
+    tmpDir: var
