Run the sync-l10 action only for the main repo

--- a/.github/workflows/sync-l10n-repo.yml
+++ b/.github/workflows/sync-l10n-repo.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   sync-locales:
     runs-on: ubuntu-latest
+    if: github.repository == 'MahoCommerce/maho'
     steps:
       - name: Generate token
         id: generate_token
