--- a/.phpstan.neon
+++ b/.phpstan.neon
@@ -6,7 +6,7 @@ parameters:
     magentoRootPath: %currentWorkingDirectory%
     phpVersion: 80200
     dynamicConstantNames:
-        - MAHO_STARTER_KIT
+        - MAHO_IS_STARTER_KIT
     paths:
         - app/bootstrap.php
         - app/Mage.php
