--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "phpseclib/mcrypt_compat": "^2.0.3",
         "phpseclib/phpseclib": "^3.0.14",
         "shardj/zf1-future": "1.24.0",
-        "symfony/console": "^7.1"
+        "symfony/console": "^7.1",
+        "composer-runtime-api": "^2"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
