--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
         "AFL-3.0"
     ],
     "type": "maho-source",
+    "repositories": [
+        { "type": "vcs", "url": "https://github.com/justinbeaty/maho-composer-plugin.git" }
+    ],
     "require": {
         "php": ">=8.2",
         "ext-ctype": "*",
@@ -32,7 +35,7 @@
         "composer-runtime-api": "^2",
         "cweagans/composer-patches": "^1.7",
         "ezyang/htmlpurifier": "^4.17",
-        "mahocommerce/maho-composer-plugin": "dev-main",
+        "mahocommerce/maho-composer-plugin": "dev-topic-autoloader",
         "pelago/emogrifier": "^7.0",
         "phpseclib/mcrypt_compat": "^2.0.3",
         "phpseclib/phpseclib": "^3.0.14",
@@ -79,7 +82,6 @@
         }
     },
     "config": {
-        "use-include-path": true,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "cweagans/composer-patches": true,
