--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ext-dom": "*",
         "ext-fileinfo": "*",
         "ext-filter": "*",
+        "ext-ftp": "*",
         "ext-gd": "*",
         "ext-hash": "*",
         "ext-iconv": "*",
