--- a/.phpstan.baseline.neon
+++ b/.phpstan.baseline.neon
@@ -2256,6 +2256,16 @@ parameters:
 			path: app/code/core/Mage/Customer/Block/Newsletter.php
 
 		-
+			message: "#^Method Mage_Eav_Model_Entity_Attribute_Source_Interface\\:\\:getAllOptions\\(\\) invoked with 1 parameter, 0 required\\.$#"
+			count: 2
+			path: app/code/core/Mage/Customer/Helper/Address.php
+
+		-
+			message: "#^Method Mage_Eav_Model_Entity_Attribute_Source_Interface\\:\\:getAllOptions\\(\\) invoked with 1 parameter, 0 required\\.$#"
+			count: 2
+			path: app/code/core/Mage/Customer/Helper/Data.php
+
+		-
 			message: "#^Property Mage_Customer_Helper_Data\\:\\:\\$_customer \\(Mage_Customer_Model_Customer\\) in empty\\(\\) is not falsy\\.$#"
 			count: 1
 			path: app/code/core/Mage/Customer/Helper/Data.php
