Rewrote js/prototype/validation.js in modern vanilla js removing prototypejs, moved to js/validation.js

--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -2,6 +2,6 @@
 paths-ignore:
   - 'js/prototype/prototype.js'
   - 'js/mage/adminhtml/wysiwyg/tiny_mce/setup.js'
-  - 'js/prototype/validation.js'
+  - 'js/validation.js'
   - 'js/extjs/ext-tree.js'
   - '**/*.test.js'
