--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,8 @@
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
         "friendsofphp/php-cs-fixer": "^3.4",
-        "mahocommerce/maho-phpstan-plugin": "@dev",
-        "phpstan/phpstan": "^1.12",
+        "mahocommerce/maho-phpstan-plugin": "^2",
+        "phpstan/phpstan": "^2.0",
         "squizlabs/php_codesniffer": "^3.7"
     },
     "suggest": {
