--- a/.github/workflows/copyright.yml
+++ b/.github/workflows/copyright.yml
@@ -33,9 +33,16 @@ jobs:
         run: |
           # Get current year
           CURRENT_YEAR=$(date +%Y)
-          
+
           # Initialize error flag
           ERROR=0
+
+          # List of files to ignore
+          ignore="
+          .phpcs.xml
+          .php-cs-fixer.php
+          .rector.php
+          "
 
           # Loop through each modified file
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
@@ -43,11 +50,16 @@ jobs:
             if [ ! -f "$file" ]; then
               continue
             fi
-          
+
             # Only check files with specific extensions
             extension="${file##*.}"
             if ! [[ "${extension,,}" =~ ^(css|js|php|phtml|template|xml)$ ]]; then
               continue
+            fi
+
+            # Check ignored files
+            if $( echo $ignore | grep -w -q $file ); then
+                continue;
             fi
 
             # Check if file contains the copyright string with current year
@@ -65,5 +77,5 @@ jobs:
             echo "❌ Error: Some files are missing the required copyright notice"
             exit 1
           fi
-          
+
           echo "✅ Success: All modified files contain the required copyright notice"
