--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "phpseclib/phpseclib": "^3.0.14",
         "shardj/zf1-future": "^1.24.1",
         "symfony/console": "^7.1",
-        "spomky-labs/otphp": "^11.3"
+        "spomky-labs/otphp": "^11.3",
+        "bacon/bacon-qr-code": "^3.0"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
