--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 /.phpcs.xml export-ignore
 /.phpstan.baseline.neon export-ignore
 /.phpstan.neon export-ignore
+/.rector.php export-ignore
 /README.md export-ignore
 
 # Enforce checkout with linux lf
