--- a/.phpstan.baseline.neon
+++ b/.phpstan.baseline.neon
@@ -3145,6 +3145,12 @@ parameters:
 			path: app/code/core/Mage/Payment/Model/Method/Abstract.php
 
 		-
+			message: '#^Loose comparison using \!\= between ''''\|''OT'' and ''SS'' will always evaluate to true\.$#'
+			identifier: notEqual.alwaysTrue
+			count: 1
+			path: app/code/core/Mage/Payment/Model/Method/Cc.php
+
+		-
 			message: '#^Method Mage_Payment_Model_Recurring_Profile\:\:exportStartDatetime\(\) should return string\|Zend_Date but empty return statement found\.$#'
 			identifier: return.empty
 			count: 1
