Trying to fix copyright checker

--- a/.github/workflows/copyright.yml
+++ b/.github/workflows/copyright.yml
@@ -66,7 +66,7 @@ jobs:
             # Pattern matches either:
             # @copyright  Copyright (c) 2024 Maho (https://mahocommerce.com)
             # @copyright  Copyright (c) (2024-)2024 Maho (https://mahocommerce.com)
-            if ! grep -E -q "Copyright \(c\) (\(2024-\))?${CURRENT_YEAR} Maho \(https://mahocommerce\.com\)" "$file"; then
+            if ! grep -E -q "Copyright \(c\) (2024-)?${CURRENT_YEAR} Maho \(https://mahocommerce\.com\)" "$file"; then
               echo "❌ Copyright notice missing in: $file"
               ERROR=1
             fi
