--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "shardj/zf1-future": "^1.24.1",
         "symfony/console": "^7.1",
         "spomky-labs/otphp": "^11.3",
-        "bacon/bacon-qr-code": "^3.0"
+        "bacon/bacon-qr-code": "^3.0",
+        "symfony/polyfill-php83": "^1.31"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
