Added minify/deferjs modules to composer suggest

--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,9 @@
     },
     "suggest": {
         "colinmollenhour/cache-backend-redis": "Redis support for Maho's backend cache",
-        "colinmollenhour/magento-redis-session": "Redis support for PHP sessions"
+        "colinmollenhour/magento-redis-session": "Redis support for PHP sessions",
+        "fballiano/openmage-cssjs-minify":  "Minification support for CSS/JS",
+        "fballiano/openmage-defer-javascripts":  "Move all javascripts to the end of all pages, preserving execution order"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
